--- a/src/Pages/Profile/page/Form/Services/style/Services.scss
+++ b/src/Pages/Profile/page/Form/Services/style/Services.scss
@@ -3,8 +3,7 @@
     font:bold 20px/24px arial;
     margin-top:40px;
     text-align: center;
-    display:block;
-
+ 
 }
 
 h1 {
@@ -12,9 +11,18 @@ h1 {
    font:bold 20px/20px arial;
    position:relative;
    top:0px;
+ 
 }
 
 p {
     text-align:center;
     margin-top:-20px;
+}
+
+.Alert {
+     color:red;
+
+     &:hover {
+         color:#fff;
+     }
 }
