--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  width:100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,9 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration:none;
-  overflow-x: hidden;
-  background:#000;
-  
+  overflow-x: hidden; 
+   
 }
 
 code {
