프로필 제목 수정

--- a/src/Pages/Profile/page/Form/Slide.scss
+++ b/src/Pages/Profile/page/Form/Slide.scss
@@ -11,3 +11,20 @@
     padding:10px 20px;
 
 }
+
+.form {
+    border:1px solid red;   
+}
+
+.p {
+    text-align:center;
+    margin:20px auto;
+    position:relative;
+    left:20px;
+    color:#fff;
+}
+
+.description {
+    font:bold 16px/18px arial;
+    color:#fff;
+}
