--- a/src/Pages/Profile/page/style/Footer.scss
+++ b/src/Pages/Profile/page/style/Footer.scss
@@ -2,3 +2,11 @@
     width:554px;
     height:100px;
 }
+
+.FaceBook {
+    margin:auto;
+    width:19.2px;
+    height:19px;
+    position:relative;left:25%;
+    top:8px;
+}
