--- a/src/Pages/Profile/page/style/FooterStyle.scss
+++ b/src/Pages/Profile/page/style/FooterStyle.scss
@@ -1,7 +1,23 @@
 .footerWrapper {
     width:100%;
-    height:200.8px;
-    background: #20c997;
-    background:linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-    padding:-10px 0px 25px 0px;
+    height:102.8px;
+    background: blue;
+    padding:25px 0px 25px 0px;
+}
+
+.container {
+    max-width:1320px;
+    height:52.8px;
+    margin:auto;
+    padding:0px 12px 0px 12px;
+    border:1px solid #000;
+    color:#000;
+}
+
+h1 {
+    color: #fff;
+}
+
+span {
+    font:bold 24px/24px arial;
 }
