--- a/src/Pages/Profile/page/Form/Services/style/Services.scss
+++ b/src/Pages/Profile/page/Form/Services/style/Services.scss
@@ -10,14 +10,20 @@ h1 {
    text-align: center;
    font:bold 20px/20px arial;
    position:relative;
-   top:0px;
+   top:10px;
+   color:#000;
  
 }
 
 p {
-    text-align:center;
-    margin-top:-20px;
+
 }
+
+.p1 {
+    margin:20px; 
+    text-align:center;
+    font:14px/24px arial;
+ }
 
 .Alert {
      color:#000;
