--- a/src/Pages/Profile/page/Form/Services/style/Services.scss
+++ b/src/Pages/Profile/page/Form/Services/style/Services.scss
@@ -10,7 +10,9 @@ h1 {
    text-align: center;
    font:bold 20px/20px arial;
    position:relative;
-   top:10px;
+   top:25px;
+   padding-top:0px;
+   
    color:#000;
  
 }
@@ -22,6 +24,8 @@ p {
 .p1 {
     margin:20px; 
     text-align:center;
+    position:relative;
+    top:10px;
     font:14px/24px arial;
  }
 
