--- a/src/Pages/Profile/page/style/FooterStyle.scss
+++ b/src/Pages/Profile/page/style/FooterStyle.scss
@@ -36,3 +36,13 @@ span {
     height:40px;
     transition:all 0.4s;
 }
+
+.footer2H1 {
+    text-align:center;
+    color: #fff;
+    font:bold 18px/24px arial;
+}
+
+.footer2Span {
+    
+}
