--- a/src/Pages/Profile/page/Form/Services/style/Services.scss
+++ b/src/Pages/Profile/page/Form/Services/style/Services.scss
@@ -6,7 +6,7 @@
  
 }
 
-h1 {
+.Serviceh1 {
    text-align: center;
    font:bold 20px/20px arial;
    position:relative;
@@ -21,12 +21,12 @@ p {
 
 }
 
-.p1 {
+.p100 {
     margin:20px; 
     text-align:center;
     position:relative;
     top:10px;
-    font:14px/24px arial;
+    font:16px/20px arial;
  }
 
 .Alert {
