--- a/src/Pages/Profile/page/Form/Services/style/Services.scss
+++ b/src/Pages/Profile/page/Form/Services/style/Services.scss
@@ -30,9 +30,17 @@ p {
  }
 
 .Alert {
-     color:#000;
+    color:#000;
+    position:relative;
+    left:0px;
+    // border:1px solid #000;
+    top:0px;
+    padding:29px;
+    border-radius:100%;
 
-     &:hover {
-        color:#fff
-     }
+   
+
+    &:hover {
+       color:#fff;
+    }
 }
