--- a/src/Pages/Profile/page/style/WorkBackground.scss
+++ b/src/Pages/Profile/page/style/WorkBackground.scss
@@ -1,135 +1,39 @@
 
 
 .Image1 {
-    background-image: url('../../Images/NoteBook.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
+  max-width:100%;
+//   border:1px solid #000;
+  height:200px;
+}
+.img-fluid {
+    max-width:100%;
+    height:260px;
+    // border:1px solid #000;
+    height:auto;
+    background-image:url('../Form/Images/DeskTop.jpg')
 
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-        transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
 }
 
-.Image2 {
-    background-image: url('../../Images/Woman.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
+ 
+.work-img img {
+    transition: all 1s;
 }
 
-.Image3 {
-    background-image: url('../../Images/DeskOfiice.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
+.work-img:hover img {
+    transform: scale(1.3);
 }
-
-
-.Image3 {
-    background-image: url('../../Images/DeskOfiice.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
-}
-
-
-.Image4 {
-    background-image: url('../../Images/Woman1.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
-}
-
-.Image5 {
-    background-image: url('../../Images/OfiiceDesckTop.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
-}
-
-
-.Image6 {
-    background-image: url('../../Images/StartUp.jpg');
-    background-size:450px 300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    // transition: all 10s 0s ease;
-    margin:auto;
-
-    &:hover {
-        background-size:470px 320px;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        // transition: all 10s 0s ease;
-       transition: all 0.5s 0s ease;
-       opacity:90%;
-    }
-}
+ 
 
 .GrAdd {
     margin-top:10px;
- color:blue;  
+    color:blue;  
+    z-index:-999;
+    
+    &:hover {
+        .Image6 {
+            background-size: 450px 300px;
+        }
+       opacity: 100%;
+    //    background-color: red;
+   }
 }
