--- a/src/SubPage/Pages/style/BodyRight.scss
+++ b/src/SubPage/Pages/style/BodyRight.scss
@@ -1,19 +1,25 @@
 .Search1 {
-    width:30px;
-    height:30px;
+    width:20px;
+    height:20px;
     margin:auto;
     // margin-left:10px;
-    border:1px solid #000;
+    // border:1px solid #000;
     position:relative;
     left:5px;
+    top:5px;
+    color:#fff;
 }
 
 .input_btn {
-    width:53px;
-    height: 36px;
+    width:16px;
+    height: 24px;
     border:1px solid #000;
+    padding:0px 20px 12px 6px;
     // background-color: #007aff;
-    z-index:2;
+    // z-index:2;
     margin:auto;
-    
+    margin-left:-1px;    
+    background:#0d6efd;
+    border:1px solid #0d6efd;
 }
+
