--- a/src/Pages/Profile/page/Form/Slide.scss
+++ b/src/Pages/Profile/page/Form/Slide.scss
@@ -5,6 +5,11 @@
     position:relative;
     top:20px;
     left:-40px;
+
+    @media screen and (max-width:1400px) {
+        position: relative;
+        left:40px;
+    }
 }
 
 .formH1 {
