--- a/src/Pages/Profile/page/style/WorkForm.scss
+++ b/src/Pages/Profile/page/style/WorkForm.scss
@@ -8,3 +8,83 @@
         box-sizing:border-box;
     }
 }
+
+.col-md-4 {
+    @media screen and (max-width:1400px) {
+        max-width:340px;
+        height:378.500px;
+        border:1px solid #000;
+        padding:0px 12px 0px 12px;
+    }
+   
+    @media screen and (max-width:1200px) {
+        max-width:289.894px;
+        height:353.984px;
+        padding:0px 12px 0px 12px;
+    }
+}
+
+
+.work-content {
+    border:1px solid blue;
+
+    @media  screen and (max-width:1400px) {
+        max-width:331.094px;
+        height:60px;
+        padding:32px 14px 16px 10px;
+        background:Red;
+    }
+
+    @media screen and (max-width:1200px) {
+        max-width:299.281px;
+        height:73px;
+    }
+}
+
+.row {
+    @media screen and (max-width:1400px) {
+        max-width:355.094px;
+        height:60px;
+        background:yellow;
+    }
+}
+
+.col-sm-8 {
+    @media screen and (max-width:1400px) {
+        max-width:212.719px;
+        height:60px;
+        padding:0px 12px 0px 12px;
+    }
+}
+
+.w-title {
+    @media screen and (max-width:1400px) {
+       font-size:19.2px;
+       color:red;
+    }
+}
+
+.col-sm-4 {
+    @media screen and (min-width: 576px) {
+        padding:0px 12px 0px 0px;
+        border:1px solid red;
+    }
+} 
+
+.w-like {
+    @media screen and (max-width:1400px) {
+        border:1px solid red;
+        width:299px;
+        height: 73px;
+        position:relative;
+        left:190%;
+    }
+
+    @media screen and (max-width:1200px) {
+        max-width:175.516px;
+        hieght:19px;
+        position:relative;
+        left:260%;
+        bottom:80%;
+    }
+}
