--- a/src/Pages/Profile/page/Form/scss/WorkForm.scss
+++ b/src/Pages/Profile/page/Form/scss/WorkForm.scss
@@ -44,7 +44,7 @@ a:hover {
     --bs-gutter-y: 1rem;
     display:flex;
     flex-wrap:wrap;
-    border:1px solid red;
+    // border:1px solid red;
     margin-top:calc(var(--bs-gutter-y) * -1);
     margin-right: calc(var(--bs-gutter-x)/ -2);
     margin-left:calc(var(--bs-gutter-x)/ -2);
@@ -56,9 +56,9 @@ a:hover {
 
 .col-sm-8 {
     width: 249,922px;
-    height:60px;
+    height:80px;
     padding: 0px 12px 0px 12px;
-    border:1px solid #000;
+    // border:1px solid #000;
     text-decoration: none;
     @media (min-width: 576px) {
         flex: 0 0 auto;
@@ -66,16 +66,18 @@ a:hover {
     }
 }
 
-w-title {
-    font-size:1.2rem;
-    text-decoration: none;
-     
+.col-sm-8, w-title {
+//   color:red;
+//   border:1px solid #000;
+  position:relative;
+  bottom:2px;
 }
 
 
 .work-content .w-more {
     color:#4e4e4e;
-    font-size: .8rem;
+    font-size: .2rem;
+
 }
 
 .work-content .w-more .w-ctegory {
@@ -89,11 +91,7 @@ w-title {
 
 
 .col-sm-4 {
-    @media  (min-width: 576px) {
-        flex:0 0 auto;
-        width:112.953px;
-        // float:right;
-    }
+//   border:1px solid blue;
 }
 
  
@@ -101,6 +99,18 @@ w-title {
    font-size:2.5rem;
    color:#0078ff;
    float:right;
+   position:relative;
+   left:20%;
+   top:10%;
+   @media screen and (max-width:1400px) {
+       position:relative;
+       left:70%;
+       top:-120%;
+   }
+   @media screen and (max-width:1200px) {
+       position:relative;
+       left:80%;
+   }
 }
 
 .work-content .w-like a {
@@ -116,7 +126,7 @@ a {
 
 .bi-plus-circle::before {
     content: "\f4d3";
-    border:1px solid #000;
+    // border:1px solid #000;
     
 }
 
@@ -148,7 +158,7 @@ a {
 .work-img {
     display:block;
     overflow: hidden;
-    border:1px solid blue;
+    // border:1px solid blue;
 }
 
 .work-box:hover #image {
