--- a/src/Pages/Profile/page/style/WorkForm.scss
+++ b/src/Pages/Profile/page/style/WorkForm.scss
@@ -13,7 +13,7 @@
     @media screen and (max-width:1400px) {
         max-width:340px;
         height:378.500px;
-        border:1px solid #000;
+        // border:1px solid #000;
         padding:0px 12px 0px 12px;
     }
    
@@ -32,7 +32,7 @@
         max-width:331.094px;
         height:60px;
         padding:32px 14px 16px 10px;
-        background:Red;
+        // background:Red;
     }
 
     @media screen and (max-width:1200px) {
@@ -45,7 +45,7 @@
     @media screen and (max-width:1400px) {
         max-width:355.094px;
         height:60px;
-        background:yellow;
+        // background:yellow;
     }
 }
 
